--- a/skills/style.css
+++ b/skills/style.css
@@ -57,6 +57,11 @@ PROPRIETA': valore; */
     font-size:xx-small;
 }
 
+.img-fluid{
+    border: 5px solid red;
+    padding: 8px;
+}
+
 
 /* desktop */
 @media screen and (min-width: 768px){
@@ -65,6 +70,7 @@ PROPRIETA': valore; */
 
     }   
 }
+
 
 
 
