--- a/home/style.css
+++ b/home/style.css
@@ -3,59 +3,192 @@ PROPRIETA': valore;
 PROPRIETA': valore; */
 
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-    
 
-.init{
-    height: 650px;
-    margin-top: 4rem! important;
+#brandNome {
+    color: #DCFE50;
 }
 
 
-.first{
+.init {
+    height: 100vh;
+    margin-top: 4rem ! important;
+    margin-bottom: 1rem ! important;
+}
+
+
+.first {
     height: 100%;
     border: 5px solid rgb(34, 34, 34);
 }
 
 
-.black{
-    padding-top: 18%;
-    text-align: right;
+.black {
+
     text-decoration: underline;
     font-style: oblique;
     color: #DCFE50;
 }
 
 
-.white{
-    padding-top: 18%;
-    text-decoration: underline; 
+.white {
+    text-decoration: underline;
     font-style: oblique;
 }
 
 
-.container{
-   height: auto;
+.container {
+    height: auto;
 }
 
 
-.row{
+.row {
     padding: 10px;
 }
 
 
-.title{
+.title {
     color: #DCFE50;
 }
 
 
-.text-center{
-    font-size:xx-small;
+.text-center {
+    font-size: small;
+}
+
+
+/* portfolio */
+
+.all {
+    position: relative;
+    width: 300px ! important;
+    border: 3px solid white;
+}
+
+
+.immagineLink {
+    width: 100%;
+    height: 50%;
+}
+
+
+.linkWebPage {
+    text-decoration: none;
+    color: white;
+}
+
+
+.linkWebPage:hover {
+    box-shadow: 0 0 10px white;
+    transition: 0.5s ease;
+    transform: scale(1.1);
+}
+
+
+/* skills */
+
+.iconaTonda {
+    border: 5px solid red;
+    padding: 8px;
 }
 
 
 
+/* desktop */
+@media screen and (min-width: 768px) {
+    .iconaTonda {
+        height: 45% ! important;
+
+    }
+}
+
+
+/* contacts */
+
+
+.contatti {
+    padding-top: 10%;
+    padding-right: 40px;
+    font-style: oblique;
+    text-decoration: underline;
+    color: #DCFE50;
+}
+
+
+.descriptionContatti {
+    padding-top: 10%;
+    padding-right: 40px;
+    overflow-wrap: break-word;
+}
+
+
+.iconaSocial {
+    width: 30px;
+}
+
+
+.app {
+    padding-top: 10%;
+    padding-left: 40px;
+    font-style: oblique;
+    text-decoration: underline;
+}
+
+
+.descriptionSocial {
+    padding-top: 10%;
+    padding-left: 40px;
+}
+
+
+.link {
+    color: black;
+}
+
+
+.link:hover {
+
+    border-top: 3px solid red;
+}
+
+
+
+.torino {
+    width: 100vw;
+    height: 100vh !important;
+}
+
+
+.rigaPassword {
+    padding: 15px;
+}
+
+
+.button:hover {
+    transition: 0.5s;
+    transform: scale(1.2);
+}
+
+
+.containerContatti {
+    height: auto;
+}
+
+
+.rigaCOntatti {
+    height: auto;
+    border: 5px solid rgb(34, 34, 34);
+}
+
+
+
+@media (max-width: 514px) {
+
+    .torino {
+        height: 50vh !important;
+    }
+}
